# bounswe2025group9

./: .env  .env.example  DEPLOY.md  FOLLOW_SYSTEM_PR.md  FOOD_IMPORT_GUIDE.md  PERSONALIZED_FEED_PR.md  README.md  bug_report_temp.md  docker-compose.test.yml  docker-compose.yml  package-lock.json  todo-issue.md
backend/: .dockerignore  .env  .env.example  352.postman_collection.json  451.postman_collection.json  Dockerfile  MICRONUTRIENT_SETUP.md  NUTRITION_API_DOCUMENTATION.md  NUTRITION_API_TESTING_GUIDE.txt  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.sh
backend/accounts/: admin.py  auth.py  models.py  repositories.py  serializers.py  services.py  tests.py  tests_deletion.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0011_backfill_micronutrient_targets.py  0012_accountdeletionlog.py  0013_seed_default_users.py
backend/accounts/tests/: test_allergen_tags.py  test_changePassword.py  test_food_proposal_badges.py  test_logoutView.py  test_profile_media.py
backend/api/: auth.py  models.py  moderation_views.py  repositories.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/api/db_initialization/: .gitignore  download_and_optimize_images.py  find_food_images.py  foods.json  generate_food_images.py  load_food_data.py  load_food_from_json.py  load_recipes.py  nutrition_score.py  recipes_data.json  scraper.py  upload_images.py
backend/api/migrations/: 0001_initial.py  0002_foodentry.py
backend/foods/: admin.py  constants.py  image_generation.py  models.py  permissions.py  schemas.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/foods/migrations/: 0003_load_500_common_foods.py  0004_foodproposal.py  0006_add_optimized_image_fields.py  0007_populate_optimized_images.py  (+29 more)
backend/forum/: admin.py  constants.py  filters.py  models.py  pagination.py  serializers.py  tests.py  urls.py  views.py
backend/meal_planner/: models.py  serializers.py  tests.py  urls.py  views.py
backend/nutrihub/: asgi.py  settings.py  urls.py  wsgi.py
backend/project/: load_food_data.py  scraper.py  settings.py  urls.py
backend/recipes/: admin.py  models.py  serializers.py  views.py
frontend/: .env  (+11 more)
(+365 files in other folders)
