[project]
name = "nutrihub-backend"
version = "0.1.0"
description = "Backend for NutriHub application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "dotenv>=0.9.9",
    "pillow>=12.0.0",
    "pyjwt>=2.10.1",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.3.0",
    "pyright>=1.1.407",
    "ruff>=0.14.3",
]

